Big update: Complete the error checking process and output information specifications+Document Management API + observability + docs